<resources>
    <string name="app_name">OwnerAccount</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget">Forget</string>
    <string name="password_with_q_mark">password?</string>
    <string name="you_don_t_have_an">You don\'t have an</string>
    <string name="account">Account?</string>
    <string name="ahjzli">Ahjzli</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="do_you_have_an">Do you have an</string>
    <string name="enter_registered_email_to_reset_your_password">Enter registered email to reset your password</string>
    <string name="forget_password">Forget password!!</string>
    <string name="search">search</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="send">SEND</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="my_table">My Table</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="loge_out">Log out</string>
    <string name="branch_location">Branch Location</string>
    <string name="store_name">Store Name</string>
    <string name="my_store">My Store</string>
    <string name="add_costumer">Add costumer</string>
    <string name="costumer_name">Costumer Name</string>
    <string name="publish_the_store">Publish The Store</string>
    <string name="max_people">Max People</string>
    <string name="add">Add</string>
    <string name="number_of_people">Number of people</string>
    <string name="how_many_person">How many person?</string>
    <string name="customer_name">customer Name</string>
    <string name="store_name_text">Store Name:</string>
    <string name="email_text">Email:</string>
    <string name="branch_name_text">Branch Name:</string>
    <string name="branch_location_text">Branch Location:</string>
    <string name="the_capacity">Maximum People:</string>
    <string name="costumers">:Costumers</string>
    <string name="_0">0</string>
    <string name="dash">/</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save">Save</string>
    <string name="time">time</string>
</resources>