<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bk1"
    tools:context=".MyStore">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ahjzli"
        android:textColor="@color/background"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_store"
                android:textColor="@color/main_color"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/store_name_text"
                    android:textStyle="bold"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/main_color"
                    android:textSize="25sp"/>
            <TextView
                android:id="@+id/txt_storeName_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:layout_marginStart="2dp"
                android:hint="@string/store_name"
                android:textColor="@color/main_color"
                android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="7dp"
                    android:textStyle="bold"
                    android:text="@string/email_text"
                    android:textColor="@color/main_color"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/txt_email_Profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="7dp"
                    android:hint="@string/email"
                    android:textColor="@color/main_color"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="7dp"
                    android:textStyle="bold"
                    android:text="@string/branch_name_text"
                    android:textColor="@color/main_color"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/txt_branchName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/background"
                    android:layout_marginBottom="7dp"
                    android:hint="@string/branch_name"
                    android:textColor="@color/main_color"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="7dp"
                    android:textStyle="bold"
                    android:text="@string/branch_location_text"
                    android:textColor="@color/main_color"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/txt_branchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/background"
                    android:hint="@string/branch_location"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/main_color"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/the_capacity"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/txt_maxPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/background"
                    android:layout_marginBottom="7dp"
                    android:hint="@string/max_people"
                    android:textColor="@color/main_color"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp" />
            </LinearLayout>
            <Switch
                android:id="@+id/swPublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_the_store"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/main_color"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_shape"
                android:text="@string/edit"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loge_out"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="60dp"
                app:drawableStartCompat="@drawable/ic_logout"
                android:textColor="@color/red" />



        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>