<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".registeration.Register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ahjzli"
        android:textColor="@color/background"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/main_color"
                android:textSize="50sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@color/main_color"
                app:startIconDrawable="@drawable/ic_storefront"
                app:startIconTint="@color/main_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_store_name_sign_up"
                    android:layout_width="301dp"
                    android:layout_height="wrap_content"
                    android:background="@color/light_silver"
                    android:hint="@string/store_name"
                    android:textColor="@color/main_color"
                    android:inputType="textPersonName"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@color/main_color"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/main_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email_sign_up"
                    android:layout_width="301dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_silver"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/main_color"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@color/main_color"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/main_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password_sign_up"
                    android:layout_width="301dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_silver"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/main_color"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@color/main_color"
                app:startIconDrawable="@drawable/ic_location_on"
                app:startIconTint="@color/main_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_branch_name_sign_up"
                    android:layout_width="301dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_silver"
                    android:hint="@string/branch_name"
                    android:inputType="text"
                    android:textColor="@color/main_color"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_branch_location"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:background="@color/light_silver"
                android:drawableStart="@drawable/ic_add_location"
                android:hint="@string/branch_location"
                android:textColorHint="@color/main_color"
                android:textColor="@color/main_color" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_shape"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/do_you_have_an"
                    android:textColor="@color/text_main_color" />

                <TextView
                    android:id="@+id/txt_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:text="@string/account"
                    android:textColor="@color/main_color" />
            </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>