<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:src="@drawable/ic_maximize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textColor="@color/text_main_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>
    <EditText
        android:id="@+id/et_storeName_profile"
        android:layout_width="301dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_gravity="center"
        android:hint="@string/store_name"
        android:textColor="@color/main_color"
        android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch_name"
            android:textColor="@color/text_main_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>

    <EditText
        android:id="@+id/et_branchName_profile"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/background"
        android:hint="@string/branch_name"
        android:textColor="@color/main_color"
        android:layout_margin="10dp"
        android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_people"
            android:textColor="@color/text_main_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_maxPeople_Profile"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/background"
            android:layout_gravity="center"
            android:hint="@string/max_people"
            android:inputType="number"
            android:textColor="@color/main_color"
            android:textSize="25sp" />
    <Button
        android:id="@+id/btnEditConfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/save"
        android:textSize="25sp"
        android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>